# IronSPace

./: CMakeLists.txt  README.md
include/: asset_manager.h  game.h  game_map.h  player.h  renderer.h
media/: gameplay
src/: asset_manager.c  game.c  game_map.c  main.c  player.c  renderer.c
